--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,1 @@
-/Book.class
-/Library.class
-/LibraryManagement.class
-/Member.class
-/Transaction.class
-/module-info.class
-/LibraryManagementTes.class
-/LibaryManagementTest.class
+.class
